--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A gaming platform for the modern web." />
+    <meta
+      name="description"
+      content="Welcome to our gaming store! We offer a wide selection of products and friendly staff to help you find what you need. Shop with us for your gaming needs!"
+    />
     <title>Moofy</title>
   </head>
   <body>
