--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Welcome to our gaming store! We offer a wide selection of products and friendly staff to help you find what you need. Shop with us for your gaming needs!"
     />
     <title>Moofy</title>
+    <base href="%PUBLIC_URL%/" />
   </head>
   <body>
     <div id="root"></div>
