--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="" href="/seo/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Welcome to our gaming store! We offer a wide selection of products and friendly staff to help you find what you need. Shop with us for your gaming needs!"
     />
     <title>Moofy</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/seo/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/seo/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/seo/site.webmanifest" />
     <base href="%PUBLIC_URL%/" />
   </head>
   <body>
